--- a/aula-fundamentos-react/src/styles/globals.css
+++ b/aula-fundamentos-react/src/styles/globals.css
@@ -1,42 +1,41 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+body{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+.form-input {
+  position: relative;
+  display: flex;
+  width: 300px;
+  justify-self: center;
+  margin-bottom: 50px;
+
+  & input {
+    position: inherit;
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #cccccc;
+    border-radius: 5px;
+    background: #fff;
+    
+    &:focus{
+      border: 2px solid rgb(238, 18, 18);
+      color: #00b3ff;
+    }
+  } 
+
+  & label {
+    position: absolute;
+    left: 5px;
+    top: 10px;
+    font-size: 15px;
+    user-select: none;
+    background: #fff;
+    padding: 0 5px;
   }
-}
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+  & input:focus + label,
+  input:not(:placeholder-shown) + label {
+    top: -6px;
+    font-size: 12px;
   }
 }
